--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     background-image: url('./assets/campaign-manager.gif');
-    height: 100vh;
+    /* height: 100vh; */
     /* width: 100vh; */
     background-repeat: no-repeat;
     background-size: cover;
