--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,6 +39,8 @@
 
 .footer {
     /* position: absolute; */
+    position: fixed;
+    left: 0;
     bottom: 0;
     width: 100%;
     height: 2.5rem;
