--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,31 @@
     /* width: 100vh; */
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    flex-direction: column;
+}
+
+@media screen and (max-width: 768px) {
+    #app-container {
+        background-size: contain;
+        padding: 20px;
+    }
+
+    .campaignContent {
+        padding: 20px;
+    }
+
+    .campaignListPoints {
+        font-size: 14px;
+    }
+
+    .createCampaignForm {
+        flex-direction: column;
+    }
+
+    #footer {
+        position:fixed;
+    }
 }
 #header {
     background-color: transparent;
@@ -45,3 +70,26 @@
     width: 100%;
     height: 2.5rem;
 }
+
+/* Campaign Page Styling */
+.campaignContent {
+    background-color: #673147;
+    border-radius: 10px;
+    opacity: 75%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-shadow: 1px 1px 1px black;
+    color: white;
+}
+
+.campaignListPoints {
+    list-style-type: none;
+}
+
+.createCampaignForm {
+    display: flex;
+}
+
+
