--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,9 +3,46 @@
     padding: 0;
     background-image: url('./assets/campaign-manager.gif');
     height: 100vh;
-    /* width: 100vh; */
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.nameList {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.box {
+    width: fit-content;
+    text-align: center;
+    justify-content: center;
+    text-align: center;
+    position: absolute;
+}
+.character-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh; 
+    flex-direction: column;
+}
+.text-color {
+    color: black;
+}
+.character-box {
+    background-color: #e5d2b8; 
+    padding: 20px;
+    border-radius: 8px; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    opacity: 90%;
+}
+.column {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+.box {
+    color: black;
 }
 #header {
     background-color: transparent;
@@ -20,15 +57,6 @@
     color: 	#fff;
 }
 
-/* .tile {
-    margin-left: 20px;
-    display: flex;
-    opacity: 90%;
-    
-}
-.padding {
-    padding-left: 30px;
-} */
 .navbar-brand {
     font-size: larger;
 }
@@ -38,7 +66,6 @@
 }
 
 .footer {
-    /* position: absolute; */
     position: fixed;
     left: 0;
     bottom: 0;
