--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,6 +49,7 @@
     position: absolute;
 }
 .character-container {
+    margin: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -75,6 +76,7 @@
 }
 #header {
     background-color: transparent;
+    margin: 5px;
 }
 #footer {
     background-color: transparent;
@@ -97,7 +99,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 2.5rem;
+    /* height: 2.5rem; */
 }
 
 /* Campaign Page Styling */
@@ -131,3 +133,41 @@
   }
   
 
+.cm {
+    color: #ffffff;
+    text-shadow: 2px 2px 2px #000000;
+    padding: 10px 20px;
+    margin: 0px 20;
+    font-weight: bold;
+    font-size:x-large;
+    background-color: #673147;
+    border-radius: 20px;
+    opacity: 80%;
+    display: inline-flex;
+}
+.delm {
+    color: red;
+    background-color: #e5d2b8;
+    border-radius: 10px;
+    opacity: 75%;
+    display: inline-flex;
+    flex-direction: column;
+    text-shadow: .5px .5px .5px black;
+}
+.character-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; 
+    gap: 20px; 
+  }
+  
+  .character-card {
+    flex: 0 1 300px; 
+    background-color: #f9f9f9; 
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    opacity: 90%;
+  }
+  
+  
