--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,6 +10,42 @@
     overflow-x: hidden;
 }
 
+.cmb {
+    color: #ffffff;
+    text-shadow: 2px 2px 2px #000000;
+    padding: 10px 20px;
+    margin: 0px 20;
+    font-weight: bold;
+    font-size:x-large;
+    background-color: #673147;
+    border-radius: 20px;
+    opacity: 80%;
+    display: inline-flex;
+}
+.delm {
+    color: red;
+    background-color: #e5d2b8;
+    border-radius: 10px;
+    opacity: 75%;
+    display: inline-flex;
+    flex-direction: column;
+    text-shadow: .5px .5px .5px black;
+}
+.character-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; 
+    gap: 20px; 
+  }
+  
+.character-card {
+    flex: 0 1 300px; 
+    background-color: #f9f9f9; 
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    opacity: 90%;
+  }
 @media screen and (max-width: 768px) {
     #app-container {
         padding: 20px;
@@ -133,41 +169,5 @@
   }
   
 
-.cm {
-    color: #ffffff;
-    text-shadow: 2px 2px 2px #000000;
-    padding: 10px 20px;
-    margin: 0px 20;
-    font-weight: bold;
-    font-size:x-large;
-    background-color: #673147;
-    border-radius: 20px;
-    opacity: 80%;
-    display: inline-flex;
-}
-.delm {
-    color: red;
-    background-color: #e5d2b8;
-    border-radius: 10px;
-    opacity: 75%;
-    display: inline-flex;
-    flex-direction: column;
-    text-shadow: .5px .5px .5px black;
-}
-.character-grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center; 
-    gap: 20px; 
-  }
-  
-  .character-card {
-    flex: 0 1 300px; 
-    background-color: #f9f9f9; 
-    padding: 15px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    opacity: 90%;
-  }
   
   
