--- a/client/src/App.css
+++ b/client/src/App.css
@@ -134,7 +134,7 @@
   
 
 .cm {
-    color: #ffffff;
+    color: #ffffff !important;
     text-shadow: 2px 2px 2px #000000;
     padding: 10px 20px;
     margin: 0px 20;
