--- a/client/src/App.css
+++ b/client/src/App.css
@@ -182,6 +182,7 @@
     font-family: "Bad Script", cursive;
     font-weight: 400;
     font-style: normal;
+    text-shadow: 1px 1px 1px #673147;
 }
   .modal-text {
     font-family: "Bad Script", cursive;
